Revert "giende special"
This reverts commit af14ad800c6abff3acfada3404e2aa9a6ed253af.

--- a/ERecruteApp-back/src/main/resources/application.properties
+++ b/ERecruteApp-back/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.datasource.validation-interval = 10000
 spring.datasource.log-validation-errors = true
 spring.datasource.validation-query = = SELECT 1
 
-server.port = 8081
+#server.port = 8081
 
 
 
