--- a/ERecruteApp-front/package.json
+++ b/ERecruteApp-front/package.json
@@ -19,8 +19,13 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.1.3",
     "angular-confirmation-popover": "^4.2.0",
+    "angular-custom-modal": "^1.2.0",
     "core-js": "^2.5.4",
+    "html2canvas": "^1.0.0-rc.1",
+    "jspdf": "^1.5.3",
+    "ng-modal": "^1.0.2",
     "ng-multiselect-dropdown": "^0.2.3",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
