--- a/ERecruteApp-back/src/main/resources/application.properties
+++ b/ERecruteApp-back/src/main/resources/application.properties
@@ -25,6 +25,9 @@ spring.datasource.validation-query = = SELECT 1
 
 server.port = 8081
 
+spring.http.multipart.max-file-size=500KB
+spring.http.multipart.max-request-size=500KB
+
 
 
 # ===============================
