--- a/ERecruteApp-back/src/main/resources/application.properties
+++ b/ERecruteApp-back/src/main/resources/application.properties
@@ -25,8 +25,11 @@ spring.datasource.validation-query = = SELECT 1
 
 server.port = 8081
 
-spring.http.multipart.max-file-size=500KB
-spring.http.multipart.max-request-size=500KB
+spring.batch.initialize-schema=always
+
+spring.batch.job.enabled=false
+
+input=file:C:/Users/abdel/Documents/GitHub/ERecrute-Project/ERecruteApp-back/src/main/resources/profils.csv
 
 
 
