--- a/ERecruteApp-back/src/main/resources/application.properties
+++ b/ERecruteApp-back/src/main/resources/application.properties
@@ -49,3 +49,6 @@ spring.jpa.hibernate.ddl-auto = update
 hrpath.app.jwtSecret=jwtHrpathSecretKey
 hrpath.app.jwtExpiration=86400
 
+spring.servlet.multipart.max-file-size = 3000KB
+spring.servlet.multipart.max-request-size = 3000KB
+
