--- a/ERecruteApp-front/package.json
+++ b/ERecruteApp-front/package.json
@@ -27,6 +27,7 @@
     "jspdf": "^1.5.3",
     "ng-modal": "^1.0.2",
     "ng-multiselect-dropdown": "^0.2.3",
+    "ng2-datepicker": "^3.1.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
